# tg_discord_mirror_rs

./: .gitignore  Cargo.toml  Dockerfile
src/: attachments.rs  main.rs  telegram_events.rs  types.rs  utils.rs  workspace.code-workspace
