[package]
name = "tg_discord_mirror"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
teloxide = { version = "0.9", features = ["macros", "auto-send"] }
log = "0.4"
pretty_env_logger = "0.4"
tokio = { version = "1.8", features = ["rt-multi-thread", "macros"] }
serenity = { version = "0.11", default-features = false, features = [
  "model",
  "rustls_backend",
] }
lazy_static = "1.4.0"
mime_to_ext = { git = "https://github.com/Cobular/mime_to_ext.git", branch = "master" }
once_cell = "1.10.0"
